@@ -14,6 +14,7 @@ phpMyAdmin - ChangeLog
 + Patch #3506552 Contest-2: Show index information in the data dictionary
 + Patch #3510656 Contest-1: Ignoring foreign keys while dropping tables
 - Bug #3509686 Reverting sort on joined column does not work
+- bug #3509665 [AJAX] Grid editing does not work after session expires
 
 3.5.1.0 (not yet released)
 - bug #3510784 [edit] Limit clause ignored when sort order is remembered
